# Telegram-RAG-bot

./: .env.template  Dockerfile  Makefile  NEW-README.md  README.md  pyproject.toml  requirements.txt
src/: ai_agent.py  app.py
