[tool.poetry]
name = "telegram-rag-bot"
version = "0.1.0"
description = ""
authors = ["Roman <roman.nieronov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.8"
langchain = "^0.1.7"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.3"
openai = "^1.12.0"
pypdf = "^4.0.1"
langchain-community = "^0.0.20"
langchain-openai = "^0.0.6"
langchainhub = "^0.1.14"
chromadb = "^0.4.22"
black = {extras = ["d"], version = "^24.2.0"}
isort = "^5.13.2"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
